tests/classes/errors/valid_constructor.bl
class Animal {
    var age: Int;
}

class Dog: Animal {
    var name: String;
}

var d: Dog = Dog(5);
